# information_extraction_from_id_cards

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
models/: .data-00000-of-00001  .index
models/model/: keras_metadata.pb  saved_model.pb
models/model/variables/: variables.data-00000-of-00001  variables.index
notebooks/: extract_characters.ipynb  inference.ipynb  plot_results.ipynb  plot_utils.py
reports/: performance.json
src/app/: api.py  request.py  schemas.py
src/data/: process.py  utils.py  utils_new.py  utils_old.py
src/features/: split.py
src/models/: evaluate.py  label.py  models.py  predict.py  save.py  train.py  tune.py  utils.py
src/streamlit/: app.py  utils.py
