[tool.poetry]
name = "OCR_ID_Cards"
version = "0.0.1"
description = ""
authors = ["haceneterbouche <hacene@powder.gg>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
opencv-python = "^4.5.4"
numpy = "^1.21.5"
matplotlib = "^3.5.1"
imutils = "^0.5.4"
scipy = "^1.7.3"
scikit-image = "^0.19.1"
tensorflow = "^2.7.0"
tensorflow-addons = "^0.15.0"
streamlit = "^1.3.1"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^21.12b0"}
pre-commit = "^2.16.0"
ipykernel = "^6.6.0"
pandas = "^1.3.5"
seaborn = "^0.11.2"
jupyterlab-code-formatter = "^1.4.10"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
# Black formatter configuration
line-length = 89
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.sublime-workspace
  | .idea
  | .venv
  | .vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''
